# grug-for-c

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: grug.c  grug.h  grug_arena.h  grug_main.c  grug_main.h
test/: example.c  test.c  test_harness.c
